<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:elevation="2dp"
        android:background="@color/common_white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/order_date_item"
            style="@style/OrderItemStyle"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/order_number_item"
            style="@style/OrderItemStyle"
            android:layout_gravity="center"/>

        <TextView
            android:layout_alignParentRight="true"
            android:text="@string/order_state_item"
            style="@style/OrderItemStyle"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/order_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>